--- a/product/package.json
+++ b/product/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "next": "14.2.1",
+    "nodemon": "^3.1.2",
+    "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18"
   },
