--- a/product/package.json
+++ b/product/package.json
@@ -16,7 +16,8 @@
     "nodemon": "^3.1.2",
     "pg": "^8.11.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
