--- a/product/package.json
+++ b/product/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@strapi/blocks-react-renderer": "^1.0.1",
     "@tailwindcss/forms": "^0.5.7",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "husky": "^9.0.11",
     "next": "14.2.1",
     "nodemon": "^3.1.2",
     "pg": "^8.11.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
